server/utils/k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: honeysens
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/honeysens: "true"
        io.kompose.service: broker
    spec:
      containers:
        - image: ubuntu/redis:6.0-21.04_beta
          name: broker
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      restartPolicy: Always
status: {}
