server/utils/k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: honeysens
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/honeysens: "true"
        io.kompose.service: database
    spec:
      containers:
        - args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --default_authentication_plugin=mysql_native_password
          image: mysql:8-oracle
          name: database
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: honeysens-db
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
      volumes:
        - name: honeysens-db
          persistentVolumeClaim:
            claimName: honeysens-db
status: {}
