server/utils/k8s/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: honeysens
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: registry
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/honeysens: "true"
        io.kompose.service: registry
    spec:
      containers:
        - env:
            - name: REGISTRY_STORAGE_DELETE_ENABLED
              value: "true"
          image: registry:2
          name: registry
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/registry
              name: honeysens-registry
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: honeysens-registry
          persistentVolumeClaim:
            claimName: honeysens-registry
status: {}
