server/utils/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: honeysens
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/honeysens: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: ACCESS_LOG
              value: "false"
            - name: API_LOG
              value: "false"
            - name: DOMAIN
              value: server
            - name: HS_DB_PASSWORD
              value: honeysens
            - name: PLAIN_HTTP_API
              value: "false"
            - name: TLS_FORCE_12
              value: "false"
          image: localhost:5000/honeysens/server:2.5.0-2022042101
          name: server
          #command: ["/bin/bash", "-c", "sleep infinity"]
          ports:
            #- containerPort: 80
            - containerPort: 8443
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /opt/HoneySens/data
              name: honeysens-data
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: honeysens-data
          persistentVolumeClaim:
            claimName: honeysens-data
status: {}
