server/utils/k8s/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: honeysens
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
    - name: redis
      port: 6379
  selector:
    io.kompose.service: broker
