server/utils/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: honeysens
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    io.kompose.service: database
