server/utils/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: honeysens
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    io.kompose.service: server
  type: LoadBalancer
status:
  loadBalancer: {}
